--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta property="og:description" content="Estimate profit, reverse-price for target profit, and run bulk checks. Free trial + one-time PRO unlock.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://profitpilot.ukwebtools.com/">
+
   <style>
     :root{
       --bg:#f6f8fb; --bg2:#eef2ff;
@@ -33,6 +34,8 @@
     a:hover{text-decoration:underline}
     .wrap{max-width:1120px;margin:0 auto;padding:22px 16px 70px}
     @media (min-width:900px){.wrap{padding:26px 22px 84px}}
+
+    /* --- MAIN PAGE NAV (kept as-is) --- */
     .nav{
       display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap;
       position:sticky;top:0;z-index:60;padding:14px 0;
@@ -218,7 +221,9 @@
       <div class="right">
         <a class="btn ghost" href="https://ukwebtools.com/">← Ukwebtools</a>
         <a class="btn active" href="index.html">Home</a>
+        <a class="btn" href="pricing.html">Pricing</a>
         <a class="btn" href="reviews.html">Reviews</a>
+        <a class="btn" href="help.html">How to use</a>
         <a class="btn" href="privacy.html">Privacy</a>
         <a class="btn" href="terms.html">Terms</a>
         <span class="chip" id="userChip">—</span>
@@ -243,10 +248,12 @@
             and run bulk checks across multiple products — all from your own inputs.
           </div>
 
+          <!-- ✅ UPDATED CTA: added Pricing button + kept clean hierarchy -->
           <div class="cta">
             <a class="btn primary" href="login.html">Start free trial</a>
-            <a class="btn" href="app.html">Open app</a>
-            <a class="btn" href="help.html">How to use</a>
+            <a class="btn" href="pricing.html">View pricing</a>
+            <a class="btn ghost" href="app.html">Open app</a>
+            <a class="btn ghost" href="help.html">How to use</a>
           </div>
 
           <div class="pillrow">
@@ -266,10 +273,13 @@
             <li>Use Reverse for target profit</li>
             <li>Use Bulk table for multiple products</li>
           </ul>
+
+          <!-- ✅ UPDATED: added “See full pricing & limits” link under price -->
           <div class="price">
             <div>
               <div class="muted">PRO is a one-time purchase unlock.</div>
               <b id="proPrice">£7.99</b>
+              <div class="small"><a href="pricing.html">See full pricing & limits</a></div>
             </div>
             <a class="btn primary" id="buyBtn" href="https://stonevia.gumroad.com/l/goddhg" target="_blank" rel="noopener">Buy PRO</a>
           </div>
@@ -325,6 +335,7 @@
         </ul>
         <div class="cta">
           <a class="btn primary" href="login.html">Start free trial</a>
+          <a class="btn" href="pricing.html">View pricing</a>
           <a class="btn" href="help.html">How to use</a>
         </div>
       </div>
@@ -345,6 +356,7 @@
           <div>
             <div class="muted">One-time unlock.</div>
             <b id="proPrice2">£7.99</b>
+            <div class="small"><a href="pricing.html">Compare Trial vs PRO</a></div>
           </div>
           <a class="btn primary" href="https://stonevia.gumroad.com/l/goddhg" target="_blank" rel="noopener">Buy PRO</a>
         </div>
